# ARIA

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  data_fetcher.py  docker-compose.yml  github_client.py  mcp_server.py  pyproject.toml  server.py
aria.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
aria/agents/: Retrieval_agent.py  bug_triage_agent.py  code_review_agent.py  onboarding_agent.py  prompts.py  regression_agent.py  supervisor.py
aria/agents/watch/: models.py  pr_graph_builder.py
aria/infra/: github_client.py
aria/memory/: embedder.py  graph_builder.py  graph_retriever.py  graph_writer.py  qdrant_store.py  repo_reader.py  retriever.py  syncmanager.py
tests/: test_code_review.py  test_graph.py  test_graph_retriever.py  test_onboarding_agent.py  test_regression_agent.py  test_repo_reader.py  test_retrieval_agent.py  test_retriever.py
